test if binary exist or not

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
 
       - name: Build
         run: cargo build --all --release && strip target/release/$PROJECT_NAME && mv target/release/$PROJECT_NAME target/release/PROJECT_NAME_amd64
+        run: ls -la target/release/
 
   release:    
     runs-on: ubuntu-latest
@@ -34,9 +35,9 @@ jobs:
     steps:
       - name: Release
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
+        # if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
-            target/release/PROJECT_NAME_amd64
+            target/release/$PROJECT_NAME_amd64
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
