--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,8 @@ jobs:
 
       - name: Build
         run: cargo build --all --release && strip target/release/$PROJECT_NAME && mv target/release/$PROJECT_NAME target/release/PROJECT_NAME_amd64
-        run: echo HI
+        run: |
+          ls -la
 
   # release:    
   #   runs-on: ubuntu-latest
