--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         run: cargo build --all --release && strip target/release/$PROJECT_NAME && mv target/release/$PROJECT_NAME target/release/PROJECT_NAME_amd64
       - name: list files
         run: |
-          ls -la
+          ls -la target/release/
 
   # release:    
   #   runs-on: ubuntu-latest
