--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,9 +28,9 @@ jobs:
       - name: Build
         run: cargo build --all --release && strip target/release/$PROJECT_NAME && mv target/release/$PROJECT_NAME target/release/$PROJECT_NAME_amd64
       - name: list files
-        run: |
-          ls -la target/release/
-          echo ${{ github.event.repository.name }}
+        run: ls -la target/release/
+      - name:
+        run: echo ${{ github.event.repository.name }}
 
   # release:    
   #   runs-on: ubuntu-latest
