--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,9 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
-  PROJECT_NAME: uradhura
+  PROJECT_NAME: ${{ github.event.repository.name }}
+  SSH_USER: ${{ secrets.SSH_USER }}
+  DEPLOYMENT_HOST: ${{ secrets.DEPLOYMENT_HOST }}
 
 jobs:
   build:
@@ -25,13 +27,8 @@ jobs:
           default: true
           override: true
 
-      - name:
-        run: echo $PROJECT_NAME is ${{ github.event.repository.name }}
       - name: Build
-        run: cargo build --all --release && strip target/release/$PROJECT_NAME && mv target/release/$PROJECT_NAME target/release/${PROJECT_NAME}_amd64
-      - name: list files
-        run: ls -la target/release/
-
+        run: cargo build --all --release && strip target/release/$PROJECT_NAME
 
   # release:    
   #   runs-on: ubuntu-latest
@@ -51,4 +48,4 @@ jobs:
 
     steps:
       - name: rsync binary
-        run: echo "rsync"
+        run: rsync -a target/release/$PROJECT_NAME $SSH_USER@$DEPLOYMENT_HOST:/home/$SSH_USER/uradhura/
