add manual trigger for deploy

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,9 @@ jobs:
   #       env:
   #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+on:
+  workflow_dispatch:
+  
   deploy:
     runs-on: ubuntu-latest
 
