--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,12 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  workflow_dispatch:
+    inputs:
+      job:
+        description: 'Deploy manually'
+        required: true
+        default: 'deploy'
 
 env:
   CARGO_TERM_COLOR: always
@@ -44,9 +50,6 @@ jobs:
   #       env:
   #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-on:
-  workflow_dispatch:
-  
   deploy:
     runs-on: ubuntu-latest
 
