--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,7 @@ jobs:
         run: |
           eval $(ssh-agent -s)
           echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
+          mkdir -p ~/.ssh
           chmod 700 ~/.ssh
           ssh-keyscan $DEPLOYMENT_HOST > ~/.ssh/known_hosts
       - name: rsync binary
