--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,5 +61,11 @@ jobs:
           mkdir -p ~/.ssh
           chmod 700 ~/.ssh
           ssh-keyscan $DEPLOYMENT_HOST > ~/.ssh/known_hosts
+      - name: create fake file
+        run: touch target/release/$PROJECT_NAME
       - name: rsync binary
         run: rsync -a target/release/$PROJECT_NAME $SSH_USER@$DEPLOYMENT_HOST:/home/$SSH_USER/uradhura/
+      - name: check if file exist
+        run: ssh $SSH_USER@$DEPLOYMENT_HOST "ls /home/$SSH_USER/uradhura/"
+      - name : restert uradhura.service
+        run: ssh $SSH_USER@$DEPLOYMENT_HOST "sudo systemctl restart uradhura.service"
