--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,22 +20,22 @@ env:
   DEPLOYMENT_HOST: ${{ secrets.DEPLOYMENT_HOST }}
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  # build:
+  #   runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v1
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v1
 
-      - name: Install latest rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          default: true
-          override: true
+  #     - name: Install latest rust toolchain
+  #       uses: actions-rs/toolchain@v1
+  #       with:
+  #         toolchain: stable
+  #         default: true
+  #         override: true
 
-      - name: Build
-        run: cargo build --all --release && strip target/release/$PROJECT_NAME
+  #     - name: Build
+  #       run: cargo build --all --release && strip target/release/$PROJECT_NAME
 
   # release:    
   #   runs-on: ubuntu-latest
@@ -62,10 +62,10 @@ jobs:
           chmod 700 ~/.ssh
           ssh-keyscan $DEPLOYMENT_HOST > ~/.ssh/known_hosts
       - name: create fake file
-        run: touch target/release/$PROJECT_NAME
+        run: mkdir -p target/release/ && touch target/release/$PROJECT_NAME
       - name: rsync binary
         run: rsync -a target/release/$PROJECT_NAME $SSH_USER@$DEPLOYMENT_HOST:/home/$SSH_USER/uradhura/
       - name: check if file exist
         run: ssh $SSH_USER@$DEPLOYMENT_HOST "ls /home/$SSH_USER/uradhura/"
       - name : restert uradhura.service
-        run: ssh $SSH_USER@$DEPLOYMENT_HOST "sudo systemctl restart uradhura.service"
+        run: ssh $SSH_USER@$DEPLOYMENT_HOST "systemctl --user restart uradhura.service"
