risky business, print secret

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,7 +64,7 @@ jobs:
       - name: create fake file
         run: mkdir -p target/release/ && touch target/release/$PROJECT_NAME && ls -la target/release/
       - name: print var
-        run: $PROJECT_NAME $SSH_USER $DEPLOYMENT_HOST
+        run: echo "$PROJECT_NAME $SSH_USER $DEPLOYMENT_HOST"
       - name: rsync binary
         run: rsync -a target/release/$PROJECT_NAME $SSH_USER@$DEPLOYMENT_HOST:/home/$SSH_USER/uradhura/
       - name: check if file exist
