--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,7 +65,7 @@ jobs:
         run: mkdir -p target/release/ && touch target/release/$PROJECT_NAME && ls -la target/release/
       - name: test ssh
         run: |
-          ssh -v
+          ssh -V
           ls -la ~/.ssh/known_hosts
           cat ~/.ssh/known_hosts
           ssh $SSH_USER@$DEPLOYMENT_HOST "uptime"
