--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,7 @@ jobs:
           chmod -R 700 ~/.ssh
           cd ~/.ssh
 
-          printf "$SSH_PRIVATE_KEY\n" > id_rsa
+          echo "$SSH_PRIVATE_KEY\n" > id_rsa
           chmod 400 id_rsa
 
           ssh-keyscan $DEPLOYMENT_HOST > known_hosts
