--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,11 +70,11 @@ jobs:
       
       - name: create fake file
         run: mkdir -p target/release/ && touch target/release/$PROJECT_NAME && ls -la target/release/
-      - name: test ssh
-        run: ssh "$SSH_USER"@"$DEPLOYMENT_HOST" "uptime"
-      # - name: rsync binary
-      #   run: rsync -a target/release/$PROJECT_NAME $SSH_USER@$DEPLOYMENT_HOST:/home/$SSH_USER/uradhura/
-      # - name: check if file exist
-      #   run: ssh $SSH_USER@$DEPLOYMENT_HOST "ls /home/$SSH_USER/uradhura/"
-      # - name : restert uradhura.service
-      #   run: ssh $SSH_USER@$DEPLOYMENT_HOST "systemctl --user restart uradhura.service"
+      # - name: test ssh
+      #   run: ssh "$SSH_USER"@"$DEPLOYMENT_HOST" "uptime"
+      - name: rsync binary
+        run: rsync -a target/release/$PROJECT_NAME $SSH_USER@$DEPLOYMENT_HOST:/home/$SSH_USER/uradhura/
+      - name: check if file exist
+        run: ssh $SSH_USER@$DEPLOYMENT_HOST "ls /home/$SSH_USER/uradhura/"
+      - name : restert uradhura.service
+        run: ssh $SSH_USER@$DEPLOYMENT_HOST "systemctl --user restart uradhura.service"
