--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,43 +18,48 @@ env:
   SSH_USER: ${{ secrets.SSH_USER }}
   SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
   DEPLOYMENT_HOST: ${{ secrets.DEPLOYMENT_HOST }}
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
-  # build:
-  #   runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v1
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
 
-  #     - name: Install latest rust toolchain
-  #       uses: actions-rs/toolchain@v1
-  #       with:
-  #         toolchain: stable
-  #         default: true
-  #         override: true
+      - name: Install latest rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          default: true
+          override: true
 
-  #     - name: Build
-  #       run: cargo build --all --release && strip target/release/$PROJECT_NAME
+      - name: Build
+        run: cargo build --all --release && strip target/release/$PROJECT_NAME
 
-  # release:    
-  #   runs-on: ubuntu-latest
+  release:    
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #     - name: Release
-  #       uses: softprops/action-gh-release@v1
-  #       # if: startsWith(github.ref, 'refs/tags/')
-  #       with:
-  #         files: |
-  #           target/release/$PROJECT_NAME_amd64
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    needs: build
+
+    steps:
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        # if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            target/release/$PROJECT_NAME
 
   deploy:
     runs-on: ubuntu-latest
 
+    needs: release
+
+    if: ${{ github.event.inputs.job == 'deploy'}}
+
     steps:
-      - name: add host key verification
+      - name: setup SSH
         run: |
           mkdir -p ~/.ssh
           chmod -R 700 ~/.ssh
@@ -65,7 +70,9 @@ jobs:
 
           ssh-keyscan $DEPLOYMENT_HOST > known_hosts
           chmod 644 known_hosts      
+
       - name: rsync binary
         run: rsync -a target/release/$PROJECT_NAME $SSH_USER@$DEPLOYMENT_HOST:/home/$SSH_USER/uradhura/
+
       - name : restert uradhura.service
         run: ssh $SSH_USER@$DEPLOYMENT_HOST "systemctl --user restart uradhura.service"
