--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,11 +48,13 @@ jobs:
       - name: Build
         run: cargo build --all --release && strip target/release/$PROJECT_NAME
 
-name: Deploy Uradhura
   deploy:
     runs-on: ubuntu-latest
 
     needs: build
+
+    environment:
+      name: dev
 
     if: ${{ github.event.inputs.job == 'deploy'}}
 
