--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,12 +5,12 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-  # workflow_dispatch:
-  #   inputs:
-  #     job:
-  #       description: 'Deploy manually'
-  #       required: true
-  #       default: 'deploy'
+  workflow_dispatch:
+    inputs:
+      job:
+        description: 'Deploy manually'
+        required: true
+        default: 'deploy'
 
 env:
   CARGO_TERM_COLOR: always
